--- a/Resolution.tex
+++ b/Resolution.tex
@@ -525,7 +525,7 @@ A summary of the resulting data-to-simulation ratios determined in the measureme
 
 \section{Measurement for Simulated Events Obtained with the \herwig Generator} 
 \label{sec:jer_result_herwig}
-The data-to-simulation ratio has been determined with respect to simulated events obtained from the \pythia generator. However, other generators use for instance different fragmentation models. Thus, it is interesting to study, if the determined data-to-simulation ratio is generator independent. For this study, the data-to-simulation ratio is derived for simulated events not taken from the \pythia generator, but for events obtained from \herwig Tune EE3C. This is the same sample as introduced in Sec.~\ref{sec:jer_syst_unc} for the evaluation of the systematic PLI uncertainty. \\
+The data-to-simulation ratio has been determined with respect to simulated events obtained from the \pythia generator. However, other generators use for instance different fragmentation models. Thus, it is interesting to study, if the determined data-to-simulation ratio is generator independent. For this study, the data-to-simulation ratio is derived for simulated events not taken from the \pythia generator, but for events obtained from \herwig tune EE3C. This is the same sample as introduced in Sec.~\ref{sec:jer_syst_unc} for the evaluation of the systematic PLI uncertainty. \\
 The measurement is performed applying the same selection criteria, as described in Sec.~\ref{subsec:jer_sel_cuts}. Also the pileup reweighting procedure is performed as described there. In Fig.~\ref{fig:control_plots_herwig}, the inclusive $\pt^\mathrm{ave}$ spectrum is compared in data and simulation for simulated events taken from \herwig. The agreement of the \ptave spectrum between data and simulation looks reasonable and exhibits a similar trend as the spectrum in simulated events from \pythia.\\
 The nominal values of the data-to-simulation ratio have been determined with statistical uncertainties with the same-$|\eta|$ requirement as well as for the three different reference-and-probe jet combinations. Since this study is only used as cross-check, no systematic uncertainties have been studied. The resulting data-to-simulation ratios for simulated events taken from \herwig together with statistical uncertainties for the different measurements are summarized in Tab.~\ref{tab:result_herwig}. \\
 In general, the obtained data-to-simulation ratios for \herwig agree among each other and are quite similar to the values obtained from \pythia for most $|\eta|$ regions. Some further discussion follows in Sec.~\ref{subsec:jer_combination}.
@@ -641,7 +641,7 @@ First, the influence of the JER measurement on the jet energy corrections is exa
 \end{figure}
 \\
 The blue-shaded band denotes the uncertainty on the L2 residual correction caused by the uncertainty of the JER measurement from 2011 dijet data, as illustrated in Fig.~\ref{fig:result_comparison} (right). Red and green dots illustrate the resulting up and down variation of the L2 residual correction when propagating the JER uncertainty, as determined in the analysis presented in this thesis. Closed and open symbols represent two different methods used to derive the L2 residual correction. Especially in the forward region of the detector, the uncertainty is reduced by about 50\%. \\
-Furthermore, the improved jet resolution measurement has a major impact on the determination of the top-quark mass. The currently most precise single measurement of the top-quark mass from CMS is performed in the lepton+jets channel and yields a top quark mass of $m_t = 172.04 \pm 0.19\; \mathrm{(stat.+JSF)} \pm 0.75\;\mathrm{(syst.)}$\gev~\cite{CMS-PAS-TOP-14-001}. The propagated uncertainty of the jet transverse-momentum resolution is among the dominant systematic uncertainties and amounts to 0.26\gev when considering the data-to-simulation scale factors as measured with the 2011 dijet data. The improved uncertainty on the JER scale factors decreases the contribution to the systematic uncertainties of the top-quark mass measurement from 0.26\gev to 0.11\gev. Accordingly, the total systematic uncertainty drops from 0.75\gev to 0.71\gev. Consequently, the precision of the top-quark mass measurement in the above mentioned lepton+jets channel reaches the accuracy of the currently overall most precise single measurement of the top-quark mass which yields a total uncertainty of 0.76\gev, as performed by the \dzero experiment~\cite{Abazov:2014dpa}.  
+Furthermore, the improved jet resolution measurement has a major impact on the determination of the top-quark mass. The currently most precise single measurement of the top-quark mass from CMS is performed in the lepton+jets channel and yields a top quark mass of $m_t = 172.04 \pm 0.19\; \mathrm{(stat.+JSF)} \pm 0.75\;\mathrm{(syst.)}$\gev~\cite{CMS-PAS-TOP-14-001}. The propagated uncertainty of the jet transverse-momentum resolution is among the dominant systematic uncertainties and amounts to 0.26\gev when considering the data-to-simulation scale factors as measured with the 2011 dijet data. The improved uncertainty on the JER scale factors decreases the contribution to the systematic uncertainties of the top-quark mass measurement from 0.26\gev to 0.11\gev. Accordingly, the total systematic uncertainty drops from 0.75\gev to 0.71\gev~\cite{MSeidel}. Consequently, the precision of the top-quark mass measurement in the above mentioned lepton+jets channel reaches the accuracy of the currently overall most precise single measurement of the top-quark mass which yields a total uncertainty of 0.76\gev, as performed by the \dzero experiment~\cite{Abazov:2014dpa}.   
 
 \section{Adjustment of the MC-Resolution to Data}
 \label{sec:jer_adjustment}
