--- a/Thesis.tex
+++ b/Thesis.tex
@@ -220,7 +220,7 @@ a4paper
 \chapter[Search for New Physics with Jets and Missing Transverse Momentum]{Search for New Physics in the Multijet and Missing Transverse Momentum Final State at $\sqrt{s}$ = 8 TeV} \label{chap:RA2}
 \input{RA2.tex}
 
-\chapter[Prospect Studies for a Search for Top Squarks at $\sqrt{s}$ = 13 TeV]{Prospect Studies for a Search for Top Squarks in Events with Jets and Missing Transverse Momentum at $\sqrt{s}$ = 13 TeV} \label{chap:Stop}
+\chapter[Prospect Studies for a Search for Top Squarks at $\sqrt{s}$ = 13 TeV]{Prospect Studies for a Search for Stop Quarks in Events with Jets and Missing Transverse Momentum at $\sqrt{s}$ = 13 TeV} \label{chap:Stop}
 \input{Stop.tex}
 
 \chapter{Conclusions} \label{chap:Conclusion}
