--- a/RA2.tex
+++ b/RA2.tex
@@ -247,8 +247,9 @@ The main sources of uncertainty for the prediction of \ZInvJets events arise fro
 \end{figure}
 Background contributions arising from \WJets and \ttbar events with a hadronically decaying $\tau$ lepton are estimated using a $\mu + \mathrm{jets}$ control sample. Since $\mu + \mathrm{jets}$ and $\tau_h + \mathrm{jets}$ events arise from the same physics process, they feature the same kinematics except for the different response of the detector to a $\mu$ and a $\tau_h$.  \\
 The $\mu + \mathrm{jets}$ sample is selected by triggering on a single isolated muon or a muon accompanied by at least two jets. Furthermore, instead of applying a lepton veto, exactly one $\mu$ with \pt$ > 20$\gev and $|\eta| < 2.1$ is required. In order to prevent the control sample from signal contamination, a selection on the transverse mass $m_\mathrm{T} = \sqrt{2\pt^{\mu}\met[1-\mathrm{cos(\Delta \phi)}]}$ of $m_\mathrm{T} \le 100$\gev is imposed with the azimuthal angle $\Delta \phi$ between the direction of the muon four-momentum and the \met vector. \\
-The difference between the $\mu$ and the $\tau_h$ is taken into account by replacing the muon by a simulated $\tau_h$ jet. This is done by randomly sampling the transverse momentum of the $\tau_h$ jet from the response $\pt^\mathrm{jet}/\pt^{\tau}$, obtained from simulation, of a reconstructed jet with $\pt^\mathrm{jet}$ matched to a generated hadronically decaying $\tau$ lepton with $\pt^{\tau}$. Technically, sampling means that the four-momentum of the muon is scaled with the proper value from the $\tau_h$ response. The generated $\tau$ lepton has to fulfill $\pt > 20$\gev and $|\eta| < 2.1$ and the distance for the matching is chosen to be $\Delta R < 0.2$ for tau-\pt$ < 50$\gev and $\Delta R < 0.1$ otherwise. The response is obtained from simulated \ttbar and \WJets events and subsequently mixed according to the cross sections of these processes. The random sampling of the response is repeated one hundred times for each event to sample the complete response function. If an event in the control sample is obtained from a prescaled trigger, the repetition of the sampling is increased according to the prescale factor.   \\
-In the following, \HT, \MHT and \NJets are recalculated for each event, including the transverse momentum of the $\tau_h$ jet, and all selection criteria, as described in Sec.~\ref{subsec:RA2_baseline}, are applied to the sample. The background contribution due to hadronic-tau events is obtained for all search regions by further correcting the event yields for the trigger efficiency, muon reconstruction and isolation efficiency, kinematic and detector acceptance as well as the ratio of branching fractions of $W \rightarrow \tau_h \nu$ to $W \rightarrow \mu \nu$ events. The statistical uncertainty of the background prediction is estimated with pseudo-experiments using a bootstrap method~\cite{GVK017474957}. \\
+The difference between the $\mu$ and the $\tau_h$ is taken into account by replacing the muon by a simulated $\tau_h$ jet. This is done by randomly sampling the transverse momentum of the $\tau_h$ jet from the response $\pt^\mathrm{jet}/\pt^{\tau}$, obtained from simulation, of a reconstructed jet with $\pt^\mathrm{jet}$ matched to a generated hadronically decaying $\tau$ lepton with $\pt^{\tau}$. Technically, sampling means that the four-momentum of the muon is scaled with the proper value from the $\tau_h$ response. However, if an event in the control sample is obtained from a prescaled trigger, the sampling is performed not only once but increased according to the prescale factor. For the calculation of the response, the generated $\tau$ lepton has to fulfill $\pt > 20$\gev and $|\eta| < 2.1$ and the distance for the matching is chosen to be $\Delta R < 0.2$ for tau-\pt$ < 50$\gev and $\Delta R < 0.1$ otherwise. The response is obtained from simulated \ttbar and \WJets events and subsequently mixed according to the cross sections of these processes. \\
+In order to sample the complete response function, the random sampling of the response is repeated one hundred times for each event following a bootstrap method~\cite{GVK017474957}. The actual prediction is given by the mean of the set of predictions from the bootstrapping and the statistical uncertainty is obtained from the standard deviation. Furthermore, also the statistical uncertainty of the seed sample is taken into account by considering the number of occurences of a seed event in the signal region. \\
+In the following, \HT, \MHT and \NJets are recalculated for each event, including the transverse momentum of the $\tau_h$ jet, and all selection criteria, as described in Sec.~\ref{subsec:RA2_baseline}, are applied to the sample. The background contribution due to hadronic-tau events is obtained for all search regions by further correcting the event yields for the trigger efficiency, muon reconstruction and isolation efficiency, kinematic and detector acceptance as well as the ratio of branching fractions of $W \rightarrow \tau_h \nu$ to $W \rightarrow \mu \nu$ events.  \\
 The validity of this background estimation procedure is tested by comparing the event yields obtained from applying the prediction method to simulated events from \ttbar and \WJets events to the respective genuine background obtained from simulation. This comparison is shown as a function of \HT, \MHT and \NJets in Fig.~\ref{fig:ra2_tauhad} after the baseline selection. Although the agreement is quite reasonable and hence the method is observed to work reliable, uncertainties of 10\% are considered for $3 \leq \NJets \leq 5$ and 20\% for jet multiplicities $6 \leq \NJets \leq 7$ and $\NJets \ge 8$. These uncertainties mainly reflect the statistical precision of the validation test. \\
 Further systematic uncertainties taken into account for the hadronic-tau background prediction cover differences between data and MC for the muon isolation and reconstruction efficiencies as well as uncertainties on the kinematic and geometric acceptance, the $\tau_h$ jet response and the acceptance of the transverse mass cut. 
 
@@ -431,7 +432,7 @@ Since the rebalancing step is supposed to provide an estimate of the particle-le
   \label{fig:qcd_rs_rebfactor}
 \end{figure}
 \\
-This effect can be explained by the necessity to discard soft jets in the rebalancing procedure. By not taking into account all jets in the rebalancing, also soft jets that do belong to the actual hard interaction are not considered. This introduces an artifical additional imbalance in the event which has to be compensated for in the kinematic fit. In order to further study this threshold effect, a closure test is performed on a simulated QCD sample which is generated without pileup. This offers the possibility to drop the requirement of $\pt > 10$\gev for jets considered in the rebalancing and is obtained from the \pythia event generator. For consistency, also the response templates are in this closure test taken from the same QCD sample. The results of this test are shown in Fig.~\ref{fig:qcd_rs_closure_nopu}. In general, the disagreement for the shown regions is statistically compatible with zero. Especially the higher jet multiplicities are in this case predicted correctly by the R+S method, when there is no necessity to impose the minimum \pt threshold in the rebalancing. 
+This effect can be explained by the necessity to discard soft jets in the rebalancing procedure. By not taking into account all jets in the rebalancing, also soft jets that do belong to the actual hard interaction are not considered. This introduces an artifical additional imbalance in the event which has to be compensated for in the kinematic fit. In order to further study this threshold effect, a closure test is performed on a simulated QCD sample which is generated without pileup. This offers the possibility to drop the requirement of $\pt > 10$\gev for jets considered in the rebalancing and is obtained from the \textsc{Pythia6}~\cite{Sjostrand:2006za} event generator with tune Z2*~\cite{Chatrchyan:2013gfi}. For consistency, also the response templates are in this closure test taken from the same QCD sample. The results of this test are shown in Fig.~\ref{fig:qcd_rs_closure_nopu}. In general, the disagreement for the shown regions is statistically compatible with zero. Especially the higher jet multiplicities are in this case predicted correctly by the R+S method, when there is no necessity to impose the minimum \pt threshold in the rebalancing. 
  \begin{figure}[!t]
   \centering
 
@@ -522,8 +523,7 @@ The uncertainty which is finally considered by the procedure described above as 
   \label{fig:trig_eff_650_3njets5}
 \end{figure}
 After the successful validation of the R+S method in simulated events and a quantification of a possible remaining bias, the procedure can finally be applied to data, in order to estimate the QCD background contributions. \\
-The QCD background prediction is performed on a QCD multijet data control sample. This is collected by two triggers based on \HT calculated from PF jets. The nominal \HT thresholds of the two triggers are 350\gev and 650\gev, respectively. The trigger efficiency as a function of \HT for a nominal threshold of 350\gev has been evaluated already for the signal trigger in Sec.~\ref{subsec:RA2_samples_trigger} and was observed to be fully efficient for the baseline \HT cut. The trigger efficiencies for the respective trigger with $\HT = 650$\gev are shown in Fig.~\ref{fig:trig_eff_650_3njets5} for a jet multiplicity of 3--5 and for jet multiplicities $6 \leq \NJets \leq 7$ and $\NJets \geq 8$ in App.~\ref{fig:trig_eff_650_6njets7} and App.~\ref{fig:trig_eff_650_njets8}, respectively. For these jet multiplicity selections, these two trigger paths are fully efficient for a \HT selection of 800\gev. \\
-Since two different triggers are used, each event of the multijet control sample has to be unambigously assigned to one trigger to avoid double-counting of certain events and to gain a smooth \HT spectrum which allows an unbiased background prediction. Taking into account that the trigger with the lower \HT threshold has been prescaled during operation, this is done as follows: For each event, the trigger which fired and has the lowest prescale factor is determined. Then the event is weighted according to the prescale factor. Since only one prescaled and one unprescaled trigger is considered, this assignment is unambigious and leads to a smooth \HT spectrum which starts at the lowest trigger threshold. The prescale weighted seed \HT distribution is illustrated in Fig.~\ref{fig:qcd_rs_seedht}.
+The QCD background prediction is performed on a QCD multijet data control sample. This is collected by two triggers based on \HT calculated from PF jets. The nominal \HT thresholds of the two triggers are 350\gev and 650\gev, respectively. The trigger efficiency as a function of \HT for a nominal threshold of 350\gev has been evaluated already for the signal trigger in Sec.~\ref{subsec:RA2_samples_trigger} and was observed to be fully efficient for the baseline \HT cut. The trigger efficiencies for the respective trigger with $\HT = 650$\gev are shown in Fig.~\ref{fig:trig_eff_650_3njets5} for a jet multiplicity of 3--5 and for jet multiplicities $6 \leq \NJets \leq 7$ and $\NJets \geq 8$ in App.~\ref{fig:trig_eff_650_6njets7} and App.~\ref{fig:trig_eff_650_njets8}, respectively. For these jet multiplicities, the trigger paths are fully efficient for a \HT selection of 800\gev. Since two different \HT threshold triggers are used, each event of the multijet control sample has to be unambigously assigned to one trigger to avoid double-counting of certain events and to gain a smooth \HT spectrum which allows an unbiased background prediction. Taking into account that the trigger with the lower \HT threshold has been prescaled during operation, this is done as follows: For each event, the trigger which fired and has the lowest prescale factor is determined. Then the event is weighted according to the prescale factor. Since only one prescaled and one unprescaled trigger is considered, this assignment is unambigious and leads to a smooth \HT spectrum which starts at the lowest trigger threshold. The prescale weighted seed \HT distribution is illustrated in Fig.~\ref{fig:qcd_rs_seedht}.
 \begin{figure}[!t]
   \centering
   \begin{tabular}{c}
@@ -532,17 +532,21 @@ Since two different triggers are used, each event of the multijet control sample
   \caption{Seed \HT spectrum of full 2012 dataset used as input for the R+S method after correcting for trigger prescales.}
   \label{fig:qcd_rs_seedht}
 \end{figure}
-The usage of the prescaled trigger is necessary, in order to collect also events with $\HT < 800$\gev and in particular also events with \HT values below the minimum \HT threshold of the signal region. The latter events have to be considered, since they can enter the region of $\HT > 500$\gev through a fluctuation to large response values. However, the events collected by the prescaled trigger have high event weights and spoil artificially the prediction when they enter the signal region, as they lead to a substantially higher uncertainty. This problem is solved by smearing the events obtained from the prescaled trigger not only $N = 100$ times, but $N = \rm{prescale~factor} \times 100$ times and weighting them accordingly with one.\\
-\\
-The successful application of the R+S method to data can be validated. This is done by comparing the prediction of the R+S method from data to selected events in a QCD enriched data control sample. This control sample is defined by at least three jets, $\HT > 1000$\gev, an inverted $\Delta \phi$ criterion and $100 \leq \MHT \leq 200$\gev. The resulting comparison between predicted and selected data events in that region is shown in Fig.~\ref{fig:qcd_rs_dataclosure} and exhibits reasonable agreement within 10--20\%. This also justifies the approach to consider the correction factor for the rebalancing derived from simulation for data events as well. In general, no perfect agreement is expected in this test, since contaminations from other backgrounds are still present in the data control sample. \\
+The usage of the prescaled trigger is necessary, in order to collect also events with $\HT < 800$\gev and in particular also events with \HT values below the minimum \HT threshold of the signal region. The latter events have to be considered, since they can pass $\HT > 500$\gev through a fluctuation to large response values. However, the events collected by the prescaled trigger have high event weights and spoil artificially the prediction when they enter the signal region, as they lead to a substantially higher uncertainty. As described for the hadronic-tau background, this is solved by smearing the events obtained from the prescaled trigger not only once but $M$ times (with $M =$ prescale factor), and weighting them accordingly with one.
+
+\subsection{Validation in Data Events}
+Similar to the validation in simulated events, also the application of the R+S method to data can be validated. This is done by comparing the prediction of the R+S method from data to selected events in a QCD enriched data control sample. \\
+The control sample is defined by at least three jets, $\HT > 1000$\gev, an inverted $\Delta \phi$ criterion and $100 \leq \MHT \leq 200$\gev. The resulting comparison between predicted QCD multijet background events obtained from the R+S method and selected data events in the control region is shown in Fig.~\ref{fig:qcd_rs_dataclosure} and exhibits reasonable agreement within 10--20\%. This also justifies the approach to consider the correction factor for the rebalancing derived from simulation for data events as well. In general, no perfect agreement is expected in this test, since contaminations from other backgrounds are still present in the data control sample. This is illustrated in the lower row of Fig.~\ref{fig:qcd_rs_dataclosure} in which the background composition is studied in simulated events. The ratios in the bottom display the comparison of the QCD background to the total background and thus provide an estimate for the purity of the control sample. The ratios exhibit a similar trend as seen in the upper row for the comparison of the QCD prediction to the data control sample and confirm that the deviations observed in the data closure-test can essentially be attributed to the contamination of the control region by other backgrounds. The residual contribution of non-QCD background to the chosen QCD control region amounts to 5\% in total and is primarily present for \HT values up to 1500\gev and high jet multiplicities. Deviations observed in the data closure test beyond the contamination of the control sample from other backgrounds are covered by the bias uncertainty studied in Sec.~\ref{subsec:validation_mc}. \\
 Overall, the application of the R+S method to predict the QCD background contributions in data is expected to provide reliable results, since the validation tests in simulation as well as in data have a positive outcome. However, systematic uncertainties that have to be considered for the prediction of QCD background are discussed in the next section. 
 \begin{figure}[!t]
   \centering
   \begin{tabular}{cc}
                 \includegraphics[width=0.49\textwidth]{figures/HT_presel_HThigh_data_DR53X_chs_HThigh_invertedDeltaPhi_v1.pdf} &
                 \includegraphics[width=0.49\textwidth]{figures/NJets_presel_HThigh_data_DR53X_chs_HThigh_invertedDeltaPhi_v1.pdf} \\
+                \includegraphics[width=0.49\textwidth]{figures/HTRA2_MC.pdf} &
+                \includegraphics[width=0.49\textwidth]{figures/NJetsRA2_MC.pdf}
   \end{tabular}
-  \caption{Prediction of QCD background on data compared to the expectation from data for a QCD enriched control region with \HT$>~1000~\rm{GeV}$, inverted $\Delta \phi$ cut, $\NJets \geq 3$ and $100 \leq \MHT \leq 200$\gev.}
+  \caption{Prediction of QCD background on data compared to the expectation from data for a QCD enriched control region with \HT$>~1000~\rm{GeV}$, inverted $\Delta \phi$ cut, $\NJets \geq 3$ and $100 \leq \MHT \leq 200$\gev (\textit{upper row}) and selected QCD events in simulation compared to the total number of selected background events in simulation in the chosen control region (\textit{lower row}).}
   \label{fig:qcd_rs_dataclosure}
 \end{figure}
 
@@ -646,6 +650,7 @@ However, search regions with non-negligible contributions from QCD background, l
 
 \section{Results and Interpretation}
 \label{sec:RA2_results}
+The selected number of events in 19.5\fbinv of data together with the predicted event yields for the various SM background contributions estimated as discussed in Sec.~\ref{sec:RA2_Non-QCD} and Sec.~\ref{subsec:RA2_QCD}, are listed in Tab.~\ref{tab:FinalEventYields} for all 36 exclusive search regions. The displayed uncertainties for the background predictions are the total uncertainties. Furthermore, the obtained yields in data and the predicted background are visualized in Fig.~\ref{fig:ra2_summary}. The ratio in the bottom shows the difference between observed data events and predicted background normalized to the background prediction. In general, the data are consistent with the SM expectation. The largest deviation occurs in the search region for $6 \leq \NJets \leq 7$, $500 < \HT < 800$\gev and $\MHT \ge 450$\gev with a local p-value of 0.05. However, this is insignificant when including the probability to observe a statistical fluctuation as large or larger in any of the search regions corresponding to a global p-value of 0.78. 
 \begin{table}[!hp]
   \centering
   \caption{Predicted event yields for the different background components in the search regions defined by \HT, \MHT and \NJets. The uncertainties of the different background sources are added in quadrature to obtain the total uncertainties. Taken from~\cite{Chatrchyan:2014lfa}.
@@ -725,7 +730,7 @@ However, search regions with non-negligible contributions from QCD background, l
   \caption{Summary of the observed number of events in each of the 36 search regions in comparison to the corresponding background prediction. The hatched region shows the total uncertainty of the background prediction. Taken from~\cite{Chatrchyan:2014lfa}.}
   \label{fig:ra2_summary}
 \end{figure}
-The selected number of events in 19.5\fbinv of data together with the predicted event yields for the various SM background contributions estimated as discussed in Sec.~\ref{sec:RA2_Non-QCD} and Sec.~\ref{subsec:RA2_QCD}, are listed in Tab.~\ref{tab:FinalEventYields} for all 36 exclusive search regions. The displayed uncertainties for the background predictions are the total uncertainties. Furthermore, the obtained yields in data and the predicted background are visualized in Fig.~\ref{fig:ra2_summary}. The ratio in the bottom shows the difference between observed data events and predicted background normalized to the background prediction. In general, the data are consistent with the SM expectation. The largest deviation occurs in the search region for $6 \leq \NJets \leq 7$, $500 < \HT < 800$\gev and $\MHT \ge 450$\gev with a local p-value of 0.05. However, this is insignificant when including the probability to observe a statistical fluctuation as large or larger in any of the search regions corresponding to a global p-value of 0.78. \\
+\\
 \\
 Furthermore, the results are interpreted in several simplified supersymmetric models of pair production of light-flavour squarks or gluinos. The LSP is denoted as $\tilde{\chi}_1^0$. Several different decay modes are studied in the parameter space of the LSP and the squark or gluino which are
 \begin{description}
@@ -747,7 +752,7 @@ Exclusion limits are derived with the modified $\mathrm{CL_s}$~\cite{0954-3899-2
 \item 1--8\% in the signal acceptance from the systematic variation of PDFs~\cite{Botje:2011sn} 
 \item an uncertainty considering the adjustment of the rate of initial-state radiation in simulation to match the measured rate in data~\cite{isrfsr} resulting for model parameter points with small differences between the LSP and the gluino or squark mass in an uncertainty of up to 22\% and typically less than a few percent for others  
 \end{itemize}
-\begin{figure}[!hp]
+\begin{figure}[!t]
   \centering
   \begin{tabular}{cc}
                 \includegraphics[width=0.49\textwidth]{figures/RA2_Limit1.pdf} &
