--- a/Thesis.bib
+++ b/Thesis.bib
@@ -2622,6 +2622,13 @@ primaryClass   = "hep-ph"
   year = {2014}
 }
 
+@misc{MSeidel,
+  author = "M.~Seidel",
+  title = "PhD thesis in preparation",
+  note = "University of Hamburg",
+  year = {2014}
+}
+
 @article{bib:AN2013-416,
  author = {Kristin Goebel and Johannes Haller and Jochen Ott and Hartmut Stadie},
  title = {Jet Transverse Momentum Resolution Measurement using Dijet Events at $\sqrt{s} = 8$\tev},
@@ -2876,6 +2883,23 @@ author = "S. Brandt and Ch. Peyrou and R. Sosnowski and A. Wroblewski"
       primaryClass   = "hep-ex",
       reportNumber   = "CMS-PAS-QCD-10-010, CERN-PH-EP-2011-059",
       SLACcitation   = "%%CITATION = ARXIV:1107.0330;%%",
+}
+
+@article{Chatrchyan:2013gfi,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Study of the underlying event at forward rapidity in $pp$
+                        collisions at $\sqrt{s}$ = 0.9, 2.76, and 7 TeV}",
+      collaboration  = "CMS",
+      journal        = "JHEP",
+      volume         = "1304",
+      pages          = "072",
+      doi            = "10.1007/JHEP04(2013)072",
+      year           = "2013",
+      eprint         = "1302.2394",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-FWD-11-003, CERN-PH-EP-2013-012",
+      SLACcitation   = "%%CITATION = ARXIV:1302.2394;%%",
 }
 
 @article{Drell:1970yt,
@@ -3410,6 +3434,20 @@ author = "Matteo Cacciari and Gavin P. Salam"
   JOURNAL      = "CMS Physics Analysis Summary",
   volume       = "\href{http://cdsweb.cern.ch/record/1646394}{CMS-PAS-SUS-13-019}",
   YEAR         = "2014"
+}
+
+@article{Cheng:2008hk,
+      author         = "Cheng, Hsin-Chia and Han, Zhenyu",
+      title          = "{Minimal Kinematic Constraints and m(T2)}",
+      journal        = "JHEP",
+      volume         = "0812",
+      pages          = "063",
+      doi            = "10.1088/1126-6708/2008/12/063",
+      year           = "2008",
+      eprint         = "0810.5178",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:0810.5178;%%",
 }
 
 @article{CMS-PAS-SUS-14-011,
